tests/compile_fail/invalid_text_length_wrapper_literal.rs
use surgeist_style::{Length, LetterSpacingLength, VerticalAlignLength};

fn main() {
    let _vertical = VerticalAlignLength(Length::Px(1.0));
    let _letter = LetterSpacingLength(Length::Px(1.0));
}
