tests/compile_fail/invalid_text_length_wrapper_literal.stderr
error[E0423]: cannot initialize a tuple struct which contains private fields
 --> tests/compile_fail/invalid_text_length_wrapper_literal.rs:4:21
  |
4 |     let _vertical = VerticalAlignLength(Length::Px(1.0));
  |                     ^^^^^^^^^^^^^^^^^^^
  |
note: constructor is not visible here due to private fields
 --> src/value.rs
  |
  | pub struct VerticalAlignLength(Length);
  |                                ^^^^^^ private field

error[E0423]: cannot initialize a tuple struct which contains private fields
 --> tests/compile_fail/invalid_text_length_wrapper_literal.rs:5:19
  |
5 |     let _letter = LetterSpacingLength(Length::Px(1.0));
  |                   ^^^^^^^^^^^^^^^^^^^
  |
note: constructor is not visible here due to private fields
 --> src/value.rs
  |
  | pub struct LetterSpacingLength(Length);
  |                                ^^^^^^ private field
